Minor adjustment for tablets

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-8">
+                <div class="col-lg-8">
                     <button class="accordion">Description</button>
                     <div class="panel">
                         <h2>The All-In-One Citrus Tree for Every Home and Patio</h2>
@@ -326,7 +326,7 @@
                         </table>
                     </div> <!-- .panel -->
                 </div> <!-- .col -->
-                <div class="col-sm-4">
+                <div class="col-lg-4">
 
                     <!-- Additional Products Slider -->
                     <div class="op-panel">
